# cheng-mock-suite

./: .gitignore  README.md  pyproject.toml
configs/: env.example.yaml
docs/: protocol-ministry-platform-mock.md
fixtures/: semantic_compare_cases.json
fixtures/additional_ministry/: password_dictionary_105.json
fixtures/protocol_ministry_platform/: manifest.json
fixtures/receive/: command_stat_201.json  device_cmd_309.json  device_register_308.json  platform_event_303.json  platform_file_306.json  platform_log_305.json  platform_register_301.json  platform_status_304.json  policy_302.json  policy_302_interface_16.json  prod_vul_workorder_5_request.json  prod_vul_workorder_6_callback.json  sys_vul_stat_203.json  tas_stat_202.json  test_data_307_tst_type_1.json  test_data_307_tst_type_2.json  test_data_307_tst_type_3.json  test_data_307_tst_type_4.json  (+5 more)
mock_ministry/: __init__.py  cases.py  negative_cases.py  recorder.py  server.py
tests/: test_additional_ministry_interfaces.py  test_all_strict_payloads.py  test_cases.py  test_fixtures.py  test_full_review_protocol_gaps.py  test_protocol_ministry_platform.py  test_protocol_ministry_platform_assertions.py  test_protocol_ministry_platform_evidence.py  test_protocol_ministry_platform_manifest.py  test_protocol_refactor_runner.py  test_real_crypto_http.py  test_recorder.py  test_resource_limits.py  test_semantic_compare_manifest.py  test_server_contract.py  test_verify_protocol_ministry_platform_cli.py
tools/: run_mock_server.py  run_protocol_refactor_check.py  send_case.py  verify_protocol_ministry_platform.py
(+14 files in other folders)
