[project]
name = "ministry-mock-suite"
version = "0.1.0"
description = "Local ministry-side mock fixtures, receiver, recorder, and sender tools."
requires-python = ">=3.11"
dependencies = [
    "cryptography",
    "gmssl",
    "pytest",
    "pyyaml",
    "requests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mock_ministry*"]
